--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				</div>
 				
 				<div class="card">
-					<img src="image/painauchocolat.jpg" alt="pain au chocolat">
+					<img src="image/Painauchocolat.jpg" alt="pain au chocolat">
 					<h3>Pain au Chocolat</h3>
 				</div>
 				
